Добавил разметку для header

--- a/src/components/style/style.scss
+++ b/src/components/style/style.scss
@@ -1,9 +1,18 @@
-:root {
-    box-sizing: border-box;
-}
+// @import '../fonts/fonts.scss';
 
-*, 
-::after, 
-::before {
-    box-sizing: inherit;
-}
+// :root {
+//     box-sizing: border-box;
+// }
+
+// *, 
+// ::after, 
+// ::before {
+//     box-sizing: inherit;
+// }
+
+// .list-reset {
+//     margin-top: 0;
+//     margin-bottom: 0;
+//     padding-left: 0;
+//     list-style: none;
+// }
