--- a/src/components/pug/templates/layout.pug
+++ b/src/components/pug/templates/layout.pug
@@ -6,8 +6,9 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible" content="IE=edge")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
-        link(rel="stylesheet" href="assets/css/normalize.min.css")
-        link(rel="stylesheet" href= app.isBuild ? "assets/css/style.min.css" : "assets/css/style.css" )
+        //- link(rel="stylesheet" href="assets/css/normalize.min.css")
+        //- link(rel="stylesheet" href="assets/css/bootstrap.css")
+        //- link(rel="stylesheet" href= app.isBuild ? "assets/css/style.min.css" : "assets/css/style.css" )
         title= title
     body(class="body")
         block header
