Добавил разметку для hero

--- a/src/components/pug/pages/index.pug
+++ b/src/components/pug/pages/index.pug
@@ -29,6 +29,30 @@ block variables
                 innerHTML: 'Contact',
             },
         ];
+        let heroList = [
+            {
+                title: 'Countless Layout', 
+                iconName: 'i1.webp', 
+                iconAlt: 'изображение логотипа',
+            }, 
+            {
+                title: 'Easy to customize', 
+                iconName: 'i2.webp', 
+                iconAlt: 'изображение логотипа',
+            }, 
+            {
+                title: 'Live customizer', 
+                iconName: 'i3.webp', 
+                iconAlt: 'изображение логотипа',
+            }, 
+            {
+                title: 'Fully responsive', 
+                iconName: 'i4.webp', 
+                iconAlt: 'изображение логотипа',
+            }, 
+        ];
 
 block header
     include ../../sections/header/header.pug
+block main
+    include ../../sections/hero/hero.pug
