Добавил разметку для about

--- a/src/components/pug/pages/index.pug
+++ b/src/components/pug/pages/index.pug
@@ -29,7 +29,7 @@ block variables
                 innerHTML: 'Contact',
             },
         ];
-        let heroList = [
+        let aboutList = [
             {
                 title: 'Countless Layout', 
                 iconName: 'i1.webp', 
@@ -56,3 +56,4 @@ block header
     include ../../sections/header/header.pug
 block main
     include ../../sections/hero/hero.pug
+    include ../../sections/about/about.pug
