добавил разметку для experiences

--- a/src/components/pug/pages/index.pug
+++ b/src/components/pug/pages/index.pug
@@ -57,3 +57,4 @@ block header
 block main
     include ../../sections/hero/hero.pug
     include ../../sections/about/about.pug
+    include ../../sections/experiences/experiences.pug
