Добавил разметку для unique

--- a/src/components/pug/pages/index.pug
+++ b/src/components/pug/pages/index.pug
@@ -58,3 +58,4 @@ block main
     include ../../sections/hero/hero.pug
     include ../../sections/about/about.pug
     include ../../sections/experiences/experiences.pug
+    include ../../sections/unique/unique.pug
