--- a/src/components/sections/about/about.pug
+++ b/src/components/sections/about/about.pug
@@ -7,17 +7,17 @@ section(class="about")
                         img(class="body-list-about__icon" alt=`${item.iconAlt}` src=`assets/img/about/${item.iconName}`)
                     span(class="body-list-about__title")= item.title
         div(class="row about__middle middle-about")
-            div(class="col-6 middle-about__col")
-                h2(class="heading middle-about__heading") ABOUT US
-                span(class="tag middle-about__tag") TECHNOLOGY
-                p(class="paragraph middle-about__paragraph") Nulla placerat mi vitae mauris varius consequat. Aliquam libero ante, consectetur at turpis sit amet, congue Suspendisse porta bibendum scelerisque.
-                p(class="paragraph middle-about__paragraph") Suspendisse porta bibendum scelerisque. Nulla placerat
-                button(class="button middle-about__more" type="button") LEARN MORE
+            div(class="col-6 info")
+                h2(class="heading info__heading") ABOUT US
+                span(class="tag info__tag") TECHNOLOGY
+                p(class="paragraph info__paragraph") Nulla placerat mi vitae mauris varius consequat. Aliquam libero ante, consectetur at turpis sit amet, congue Suspendisse porta bibendum scelerisque.
+                p(class="paragraph info__paragraph") Suspendisse porta bibendum scelerisque. Nulla placerat
+                button(class="button info__more" type="button") LEARN MORE
         div(class="row about__bottom bottom-about")
-            div(class="col-6 bottom-about__col")
-                h3(class="heading bottom-about__heading") We work with big and small companies
-                p(class="paragraph bottom-about__paragraph") Nulla placerat mi vitae mauris varius consequat. Aliquam libero ante, consectetur at turpis sit amet, congue Suspendisse porta bibendum scelerisque.
-                p(class="paragraph bottom-about__paragraph") Suspendisse porta bibendum scelerisque. Nulla placerat
+            div(class="col-6 info")
+                h2(class="heading info__heading info__heading--alter") We work with big and small companies
+                p(class="paragraph info__paragraph") Nulla placerat mi vitae mauris varius consequat. Aliquam libero ante, consectetur at turpis sit amet, congue Suspendisse porta bibendum scelerisque.
+                p(class="paragraph info__paragraph") Suspendisse porta bibendum scelerisque. Nulla placerat
             div(class="col-6")
                 ul(class="graph")
                     li(class="graph__item")
