Добавил разметку для products

--- a/src/components/pug/pages/index.pug
+++ b/src/components/pug/pages/index.pug
@@ -59,3 +59,4 @@ block main
     include ../../sections/about/about.pug
     include ../../sections/experiences/experiences.pug
     include ../../sections/unique/unique.pug
+    include ../../sections/products/products.pug
