--- a/src/components/sections/about/about.pug
+++ b/src/components/sections/about/about.pug
@@ -12,7 +12,7 @@ section(class="about")
                 span(class="tag info__tag") TECHNOLOGY
                 p(class="paragraph info__paragraph") Nulla placerat mi vitae mauris varius consequat. Aliquam libero ante, consectetur at turpis sit amet, congue Suspendisse porta bibendum scelerisque.
                 p(class="paragraph info__paragraph") Suspendisse porta bibendum scelerisque. Nulla placerat
-                button(class="button info__more" type="button") LEARN MORE
+                a(class="button info__more" href="#") LEARN MORE
         div(class="row about__bottom bottom-about")
             div(class="col-6 info")
                 h2(class="heading info__heading info__heading--alter") We work with big and small companies
