--- a/src/components/sections/unique/unique.pug
+++ b/src/components/sections/unique/unique.pug
@@ -6,5 +6,5 @@ section(Class="unique")
                 span(class="tag info__tag") people really matter
                 p(class="paragraph info__paragraph") Nulla placerat mi vitae mauris varius consequat. Aliquam libero ante, consectetur at turpis sit amet, congue Suspendisse porta bibendum scelerisque.
                 p(class="paragraph info__paragraph") Suspendisse porta bibendum scelerisque. Nulla placerat
-                button(class="button info__more" type="button") LEARN MORE
+                a(class="button info__more" href="#") LEARN MORE
             div(class="col-6")
