Добавил разметку для clients

--- a/src/components/pug/pages/index.pug
+++ b/src/components/pug/pages/index.pug
@@ -51,6 +51,44 @@ block variables
                 iconAlt: 'изображение логотипа',
             }, 
         ];
+        let clientsList = [
+            {
+                src: 'adobe.webp', 
+                alt: 'Логотип компании', 
+            }, 
+            {
+                src: 'wp.webp', 
+                alt: 'Логотип компании', 
+            }, 
+            {
+                src: 'jq.webp', 
+                alt: 'Логотип компании', 
+            }, 
+            {
+                src: 'envato.webp', 
+                alt: 'Логотип компании', 
+            }, 
+        ];
+        let infoList = [
+            {
+                src: 'i1.webp', 
+                alt: 'Иконка', 
+                heading: 'EASY IMPORT',
+                paragraph: 'Nulla placerat mi vitae mauris varius . Aliquam libero ante, consectetur at.',
+            }, 
+            {
+                src: 'i2.webp', 
+                alt: 'Иконка', 
+                heading: 'Stunning Layouts',
+                paragraph: 'Nulla placerat mi vitae mauris varius . Aliquam libero ante, consectetur at.',
+            }, 
+            {
+                src: 'i3.webp', 
+                alt: 'Иконка', 
+                heading: 'No Coding',
+                paragraph: 'Nulla placerat mi vitae mauris varius . Aliquam libero ante, consectetur at.',
+            }, 
+        ];
 
 block header
     include ../../sections/header/header.pug
@@ -60,3 +98,4 @@ block main
     include ../../sections/experiences/experiences.pug
     include ../../sections/unique/unique.pug
     include ../../sections/products/products.pug
+    include ../../sections/clients/clients.pug
