--- a/src/components/sections/about/about.pug
+++ b/src/components/sections/about/about.pug
@@ -1,6 +1,6 @@
 section(class="about")
     div(class="container-fluid about__container")
-        ul(class="row about__wrap about__list list-about")
+        ul(class="list-reset row about__wrap about__list list-about")
             each item in aboutList
                 li(class="col-3 list-about__item")
                     div(class="card list-about__body body-list-about")
@@ -19,7 +19,7 @@ section(class="about")
                 p(class="paragraph info__paragraph") Nulla placerat mi vitae mauris varius consequat. Aliquam libero ante, consectetur at turpis sit amet, congue Suspendisse porta bibendum scelerisque.
                 p(class="paragraph info__paragraph") Suspendisse porta bibendum scelerisque. Nulla placerat
             div(class="col-6")
-                ul(class="graph")
+                ul(class="list-reset graph")
                     li(class="graph__item")
                         div(class="graph__body body-graph")
                             span(class="body-graph__title") APP DEVELOPMENT
