Добавил разметку для footer

--- a/src/components/pug/pages/index.pug
+++ b/src/components/pug/pages/index.pug
@@ -99,3 +99,5 @@ block main
     include ../../sections/unique/unique.pug
     include ../../sections/products/products.pug
     include ../../sections/clients/clients.pug
+block footer
+    include ../../sections/footer/footer.pug
