--- a/src/components/style/bootstrap.scss
+++ b/src/components/style/bootstrap.scss
@@ -1,3 +1,3 @@
-// $grid-gutter-width: 1.25rem;
+$grid-gutter-width: 1.25rem;
 
-// @import '../../../node_modules/bootstrap/scss/bootstrap-grid.scss';
+@import '../../../node_modules/bootstrap/scss/bootstrap-grid.scss';
