--- a/src/components/pug/pages/index.pug
+++ b/src/components/pug/pages/index.pug
@@ -95,6 +95,28 @@ block variables
                 paragraph: 'Nulla placerat mi vitae mauris varius . Aliquam libero ante, consectetur at.',
             }, 
         ];
+        let graphList = [
+            {
+                title: 'APP DEVELOPMENT', 
+                percent: 92,
+                bgcolor: '#F2662F', 
+            }, 
+            {
+                title: 'User Interface', 
+                percent: 88,
+                bgcolor: '#FA2B7E', 
+            }, 
+            {
+                title: 'User Experiences', 
+                percent: 95,
+                bgcolor: '#23DDAC', 
+            }, 
+            {
+                title: 'Information Architecture', 
+                percent: 50,
+                bgcolor: '#076CF0', 
+            }, 
+        ];
 
 block header
     include ../../sections/header/header.pug
