--- a/src/components/sections/clients/clients.pug
+++ b/src/components/sections/clients/clients.pug
@@ -1,5 +1,5 @@
 section(class="clients")
-    dic(class="container-fluid clients__container")
+    div(class="container-fluid clients__container")
         div(class="row")
             ul(class="col-12 clients__list list-clients")
                 each item in clientsList
