--- a/src/components/ui/box/box.scss
+++ b/src/components/ui/box/box.scss
@@ -1,5 +1,5 @@
-.title {
-    padding-left: 2.6875em;
+.box {
+    padding-left: 43px;
     font-size: 16px;
 
     &__heading {
@@ -8,12 +8,13 @@
         margin-bottom: 0;
         color: #000;
         font: 500 3.75em/1.185 Rubik, sans-serif;
+        text-transform: uppercase;
 
         &::before {
-            content: '';
+            content: "";
             position: absolute;
             top: 50%;
-            left: -0.5375em;
+            left: -0.7166em;
             width: 5px;
             height: 90%;
             background-color: #076CF0;
@@ -22,8 +23,10 @@
     }
 
     &__tag {
+        display: inline-block;
         color: #076CF0;
-        font: 400 1.875em/1.4 Abel, sans-serif;
+        font: 400 1.25em/1.3 Abel, sans-serif;
         text-transform: uppercase;
+        letter-spacing: 2px;
     }
 }
