--- a/src/components/ui/paragraph/paragraph.scss
+++ b/src/components/ui/paragraph/paragraph.scss
@@ -1,4 +1,10 @@
 .paragraph {
-    margin-top: 0;
+    margin-top: 26px;
     margin-bottom: 0;
+    color: #868686;
+    font: 400 1em/1.625 'Open Sans', sans-serif;
+
+    &:first-of-type {
+        margin-top: 30px;
+    }
 }
