--- a/src/components/sections/experiences/experiences.pug
+++ b/src/components/sections/experiences/experiences.pug
@@ -1,6 +1,7 @@
+include ../../ui/box/box.pug
+
 section(class="experiences")
-    div(class="container-fluid experiences__container")
+    div(class="container-fluid my-container experiences__container")
         div(class="row")
-            div(class="col-6")
-                h2(class="heading heading--large experience__heading") unique experiences
-                span(class="tag experinces__tag") THE NEXT LEVEL
+            div(class="col-6 experiences__col")
+                +box('unique experiences', 'THE NEXT LEVEL', 'box-experiences')
