--- a/src/components/style/style.scss
+++ b/src/components/style/style.scss
@@ -37,3 +37,4 @@ img {
 // sections
 @import '../sections/header/header.scss';
 @import '../sections/about/about.scss';
+@import '../sections/experiences/experiences.scss';
