--- a/src/components/sections/experiences/experiences.pug
+++ b/src/components/sections/experiences/experiences.pug
@@ -2,6 +2,6 @@ include ../../ui/box/box.pug
 
 section(class="experiences")
     div(class="container-fluid my-container experiences__container")
-        div(class="row")
+        div(class="row experiences__row")
             div(class="col-6 experiences__col")
                 +box('unique experiences', 'THE NEXT LEVEL', 'box-experiences')
