--- a/src/components/style/style.scss
+++ b/src/components/style/style.scss
@@ -38,3 +38,4 @@ img {
 @import '../sections/header/header.scss';
 @import '../sections/about/about.scss';
 @import '../sections/experiences/experiences.scss';
+@import '../sections/unique/unique.scss';
