--- a/src/components/sections/products/products.pug
+++ b/src/components/sections/products/products.pug
@@ -1,9 +1,12 @@
+include ../../ui/box/box.pug
+
 section(class="products")
-    div(class="container-fluid products__container")
-        div(class="col-6")
-        div(class="col-6 info")
-            h2(class="heading info__heading") Products
-            span(class="tag info__tag") latest features
-            p(class="paragraph info__paragraph") Nulla placerat mi vitae mauris varius consequat. Aliquam libero ante, consectetur at turpis sit amet, congue Suspendisse porta bibendum scelerisque.
-            p(class="paragraph info__paragraph") Suspendisse porta bibendum scelerisque. Nulla placerat
-            a(class="button info__more" href="#") LEARN MORE
+    div(class="container-fluid my-container products__container")
+        div(class="row products__row")
+            div(class="col-6 products__col")
+                div(class="products__bg")
+            div(class="col-6 products__col")
+                +box('Products', 'latest features', 'box-products')
+                    p(class="paragraph products__paragraph") Nulla placerat mi vitae mauris varius consequat. Aliquam libero ante, consectetur at turpis sit amet, congue Suspendisse porta bibendum scelerisque.
+                    p(class="paragraph products__paragraph") Suspendisse porta bibendum scelerisque. Nulla placerat
+                    a(class="button button--more products__more" href="#") LEARN MORE
