--- a/src/components/style/style.scss
+++ b/src/components/style/style.scss
@@ -39,3 +39,4 @@ img {
 @import '../sections/about/about.scss';
 @import '../sections/experiences/experiences.scss';
 @import '../sections/unique/unique.scss';
+@import '../sections/products/products.scss';
