--- a/src/components/style/style.scss
+++ b/src/components/style/style.scss
@@ -40,3 +40,4 @@ img {
 @import '../sections/experiences/experiences.scss';
 @import '../sections/unique/unique.scss';
 @import '../sections/products/products.scss';
+@import '../sections/clients/clients.scss';
