--- a/src/components/ui/card/card.pug
+++ b/src/components/ui/card/card.pug
@@ -3,9 +3,9 @@
 
 mixin card(imgSrc, mod)
     //- Классы по БЭМ
-    - let blockMod = mod ? ` ${mod}__card card-${mod}` : '';
-    - mod = mod ? ` card-${mod}` : '';
+    - let blockMod = mod ? ' ' + mod : '';
+    - let imgMod = mod ? ' ' + mod + '__img' : '';
     div(class="card" + blockMod)
-        img(class="card__img" + mod src=imgSrc alt="icon" aria-hidden="true")
+        img(class="card__img" + imgMod src=imgSrc alt="icon" aria-hidden="true")
         if block
             block
