--- a/src/components/ui/card/card.scss
+++ b/src/components/ui/card/card.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     min-height: 168px;
     padding: 1em;
+    text-align: center;
     background-color: #fff;
     box-shadow: 0 0 40px 5px #4091fb;
 
